--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,30 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.home.HomeActivity"
-    android:background="@drawable/background">
+    android:background="@drawable/background"
+    tools:context=".ui.home.HomeActivity">
 
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/txt_home_loading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:drawableTop="@drawable/loader"
-        android:text="@string/loading"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/dimen_180_dp"
         android:drawablePadding="@dimen/dimen_10_dp"
+        android:drawableTop="@drawable/loader"
+        android:fontFamily="@font/opensans_regular"
+        android:gravity="center"
+        android:text="@string/loading"
         android:textColor="@color/white"
         android:textSize="@dimen/h12"
-        android:layout_centerInParent="true"
-        android:gravity="center"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
     <LinearLayout
         android:id="@+id/linear_home_error_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_marginTop="@dimen/dimen_180_dp"
         android:gravity="center"
         android:orientation="vertical"
         android:visibility="gone">
@@ -32,21 +33,23 @@
         <android.support.v7.widget.AppCompatImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/dimen_25_dp"
-            android:src="@drawable/error"/>
+            android:layout_marginBottom="@dimen/dimen_40_dp"
+            android:src="@drawable/error" />
 
         <android.support.v7.widget.AppCompatTextView
             android:id="@+id/txt_home_retry"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingTop="@dimen/dimen_10_dp"
-            android:paddingBottom="@dimen/dimen_10_dp"
-            android:paddingLeft="@dimen/dimen_30_dp"
-            android:paddingRight="@dimen/dimen_30_dp"
             android:background="#F5C04C"
-            android:textSize="@dimen/h12"
+            android:fontFamily="@font/opensans_regular"
+            android:paddingBottom="@dimen/dimen_12_dp"
+            android:paddingLeft="@dimen/dimen_50_dp"
+            android:paddingRight="@dimen/dimen_50_dp"
+            android:paddingTop="@dimen/dimen_12_dp"
+            android:text="@string/retry"
             android:textColor="@color/white"
-            android:text="@string/retry"/>
+            android:textSize="@dimen/h12"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
@@ -61,25 +64,29 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_weight=".8"
             android:gravity="center"
-            android:orientation="vertical"
-            android:layout_weight=".8">
+            android:orientation="vertical">
 
             <android.support.v7.widget.AppCompatTextView
                 android:id="@+id/txt_home_temp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/h0"
+                android:fontFamily="@font/opensans_regular"
+                android:maxLines="1"
                 android:textColor="@color/white"
-                android:maxLines="1"/>
+                android:textSize="@dimen/h0"
+                android:textStyle="bold" />
 
             <android.support.v7.widget.AppCompatTextView
                 android:id="@+id/txt_home_city"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/h10"
+                android:layout_marginTop="@dimen/dimen_minus_20_dp"
+                android:fontFamily="@font/opensans_light"
                 android:maxLines="1"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white"
+                android:textSize="@dimen/h8" />
 
         </LinearLayout>
 
@@ -93,7 +100,7 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rcv_home_forecast_list"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent" />
 
         </RelativeLayout>
 
